--- a/flex-box/flexbox.css
+++ b/flex-box/flexbox.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.container {
+    background : green;
+}
+
 .row {
     flex-direction: row;
 }
@@ -17,15 +21,41 @@
 .column-reverse {
     flex-direction: column-reverse;
 }
+.diagonal {
+    height: 50vh;
+    flex-direction: row;
+    justify-content: space-around;
+    /* align-items: flex-start; */
+    flex-wrap: wrap;
+    /* align-content: space-around; */
+}
 
+.diagonal .item1 {
+    align-self: flex-start;
+    /* flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 12%; */
+}
 
-.container {
-    background : green;
+.diagonal .item2 {
+    align-self: center;
+    /* flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 12%; */
+}
+
+.diagonal .item3 {
+    align-self: flex-end;
+    /* flex-grow: 2;
+    flex-shrink: 2; */
 }
 
 .flexbox-item {
     background-color: orange;
     border: solid black;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 12px;
 }
 
 .item1 {
